--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo-desty.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,26 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <!-- Primary Meta Tags -->
+    <title>Desty — find out amazing places to visit.</title>
+    <meta name="title" content="Desty — find out amazing places to visit." />
+    <meta name="description" content="A blog as tourist guide." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://the-desty-app.netlify.app/" />
+    <meta property="og:title" content="Desty — find out amazing places to visit." />
+    <meta property="og:description" content="A blog as tourist guide." />
+    <meta property="og:image" content="https://the-desty-app.netlify.app/assets/images/seo-image-desty.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://the-desty-app.netlify.app/" />
+    <meta property="twitter:title" content="Desty — find out amazing places to visit." />
+    <meta property="twitter:description" content="A blog as tourist guide." />
+    <meta property="twitter:image" content="https://the-desty-app.netlify.app/screenshots/landing-page.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
